pipelight-multi (0.2.6) UNRELEASED; urgency=low

  * Update Silverlight to 5.1.30214.0
  * Add pipelight commandline switch --list-enabled-all

 -- Michael Mueller <michael@fds-team.de>  Sat, 22 Feb 2014 22:52:12 +0100


pipelight-multi (0.2.5) RELEASED; urgency=low

  * Update Flash to 12.0.0.70
  * Update version of Unity3D, Shockwave and FoxitPDF
  * Add np-ActiveX plugin
  * Add Roblox plugin
  * Add Hikvision Webcontrol plugin as experimental plugin
  * install-dependency: Fix compatibility with old versions of mktemp
  * Add compile flag -DMINGW32_FALLBACK for old versions of Mingw
  * Increase startup timeout for Wine from 20sec to 1min (for slow PCs)
  * Add man page for pipelight-plugin commandline utility
  * Moved configure-* scripts to /usr/share/pipelight/scripts/*

 -- Michael Mueller <michael@fds-team.de>  Sat, 22 Feb 2014 02:46:41 +0100


pipelight-multi (0.2.4.2) RELEASED; urgency=high

  * Improved identifier caching system to ensure that the linux side never
    uses invalid values
  * Don't require ScheduleTimer and UnscheduleTimer function calls
  * Revert PIPELIGHT_SYNC in some specific cases, where some browsers seem
    to behave differently - will be readded later after some more testing

 -- Michael Mueller <michael@fds-team.de>  Mon, 20 Jan 2014 01:11:27 +0100


pipelight-multi (0.2.4.1) RELEASED; urgency=high

  * Fix a regression with Firefox/Opera browsers, which pass a malformed
    value in the plugin initialization array

 -- Michael Mueller <michael@fds-team.de>  Sun, 19 Jan 2014 18:13:43 +0100


pipelight-multi (0.2.4) RELEASED; urgency=low

  * Add Widevine plugin (version 6.0.0.12442)
  * Add experimental Adobe Reader plugin (version 11.0.06)
  * Updated Flash plugin to version 12.0.0.43
  * Updated version of Unity3D and FoxitPDF
  * Added additional wine patches to improve performance
  * Several speed improvements like: Give control back to plugin/browser before