@@ -685,6 +685,29 @@ install_vizzedrgr()
 	return 0
 }
 
+# > Install ViewRight Plugin for Caiway
+# arguments: None
+# $DOWNLOADFILE
+install_viewright_caiway()
+{
+	# Launch the installer
+	if [ "$QUIETINSTALLATION" -eq 0 ]; then
+		"$WINE" msiexec.exe /i "$DOWNLOADFILE" 2>&1
+	else
+		"$WINE" msiexec.exe /quiet /i "$DOWNLOADFILE" 2>&1 | progressbar "Please wait, installing ..." "Running $DEP"
+	fi
+
+	local installdir="$WINEPREFIX/drive_c/Program Files/Verimatrix/ViewRight Web"
+	if [ ! -f "$installdir/npViewRight.dll" ]; then
+		echo "[$PRG] ERROR: Installer for $DEP did not run correctly or was aborted." >&2
+		return 1
+	fi
+
+	# Successful
+	return 0
+}
+
+
 # Use shasum instead of sha256sum on MacOS
 if ! command -v sha256sum >/dev/null 2>&1 && command -v shasum >/dev/null 2>&1; then
 	sha256sum()
@@ -900,6 +923,11 @@ while [ $# -gt 0 ] ; do
 			INS=(install_vizzedrgr)
 			URL="http://www.vizzed.co/VizzedRgrPlugin-v2.0.msi"
 			SHA="ddc99b1a6902e30f355533620637a2d1b7d1ff3b1bd76a65cb1fbd78b2b396cb"
+			;;
+		wine-viewright-caiway-installer)
+			INS=(install_viewright_caiway)
+			URL="https://www.caiway.nl/downloads/ViewRightWebInstaller-3.5.0.0_CaiW.msi"
+			SHA="9436dea83e42204d0a9bc4d128c2f2693dd9c5f9636d5fa57441ef5886f3ab43"
 			;;
 		*)
 			echo "[$PRG] ERROR: No installer script found for $DEP." >&2
